fix: render yaml

--- a/render.yaml
+++ b/render.yaml
@@ -4,10 +4,9 @@ services:
     env: node
     plan: free
     buildCommand: yarn install && yarn build
-    startCommand: node dist/server.js
+    startCommand: yarn start  # Changed from "node dist/server.js"
     envVars:
       - key: NODE_ENV
         value: production
       - key: PORT
         generateValue: true
-
